# ink2tex

./: .api.template  .config  .gitignore  LICENSE  NOTICE  README.md  app.py  build.bat  build_exe.bat  build_installer.bat  build_wrapper.bat  build_wrapper.py  create_installer_icon.py  final_settings_test.py  google_api.ipynb  ink2tex.spec  install_optional.py  installer.iss  main.py  prompt.txt  pyproject.toml  pyqt_app.ipynb  requirements-build.txt  start_ink2tex.bat  startup_manager.py  test_deployment.bat  test_startup.py  version_info.txt
assets/: README_ICON.txt
build_venv/: pyvenv.cfg
build_venv/Scripts/: activate  activate.bat
docs/: AUTO_STARTUP_FEATURES.md  CONFIGURATION_SYSTEM.md  DEPLOYMENT.md  DISTRIBUTION.md  INSTALLER.md
documentation/: AUTO_STARTUP_FEATURES.md  DISTRIBUTION.md
installer/: README.md  ink2tex.spec  installer.iss  requirements-build.txt
installer/hooks/: runtime_hook_numpy.py
installer/scripts/: build.bat  build_exe.bat  build_installer.bat
scripts/: analyze_imports.py  build.bat  build.py  build_exe.bat  build_exe.py  build_installer.py  clean.py  init_venv.bat  init_venv.py  setup_config.py  test_deployment.bat
src/ink2tex/: __init__.py  app.py  main.py
src/ink2tex/core/: __init__.py  api.py  config.py  hotkey.py  resources.py  single_instance.py  startup.py
src/ink2tex/ui/: __init__.py  overlay.py  preview.py  settings.py
test/: google_api.ipynb  test_google_api.ipynb
tests/: __init__.py  final_settings_test.py  run_tests.py  test_api.py  test_api_config.py  test_api_simple.py  test_app.py  test_canvas_features.py  test_config.py  test_mock_api.py  test_models.py  test_single_instance.py  test_startup.py
